--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Althealth">
         <activity
+            android:name=".ui.activities.BaseActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.activities.LoginActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.Althealth.NoActionBar"/>
+            android:theme="@style/Theme.Althealth.NoActionBar" />
         <activity
             android:name=".ui.activities.SplashActivity"
             android:exported="true"
@@ -28,7 +31,7 @@
         <activity
             android:name=".ui.activities.MainActivity"
             android:exported="true"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
