--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Althealth">
         <activity
-            android:name=".ui.activities.RegisterActivity"
+            android:name=".ui.activities.ForgotPasswordActivity"
             android:exported="false"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.Althealth.NoActionBar"/>
+        <activity
+            android:name=".ui.activities.RegisterActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.Althealth.NoActionBar" />
         <activity
             android:name=".ui.activities.BaseActivity"
             android:exported="false" />
